@startuml

interface SpanProtocol

class Span {
    timestamp
}
class Tracer
class SpanContext
class TransactionContext
class Transaction

Span --up|> SpanProtocol
Tracer --up|> SpanProtocol
Tracer *-- TransactionContext
Span *-- SpanContext
Transaction *-- Tracer

Tracer "1" *-- "many" SpanProtocol


@enduml
